samples/_failures_safe/1761074127_86b8f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d05fde2.c: In function ‘main’:
./samples/SAFE/__tmp_6d05fde2.c:137:12: error: expected declaration or statement at end of input
  137 |     struct LogAnalyzer analyzer;
      |            ^~~~~~~~~~~
